Opened 8 years ago
Closed 7 years ago
#13353 closed bug (fixed)
PNG DataTranslations copyright texts is cut off
Reported by: | kainjow | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Add-Ons/Translators/PNG | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
See screenshot. The "Group" word is cut off. The spacing on the left seems unnecessary.
Attachments (1)
Change History (7)
by , 8 years ago
Attachment: | screenshot1.png added |
---|
comment:1 by , 8 years ago
patch: | 0 → 1 |
---|
comment:2 by , 8 years ago
patch: | 1 → 0 |
---|
comment:3 by , 7 years ago
comment:4 by , 7 years ago
Since I can't attach a file to this ticket (trac error: index error pop from empty list, GET: /attachment/ticket/13353/), patch is provided as code here.
From 398b8df43a67a7774743cafa7cbd362d5930f3cf Mon Sep 17 00:00:00 2001 From: Alexander Coers <alexander.coers@gmx.de> Date: Fri, 30 Mar 2018 11:29:43 +0200 Subject: [PATCH] Fix for trac ticket 13353 --- src/add-ons/translators/png/PNGView.cpp | 7 ++++--- 1 file changed, 4 insertions(+), 3 deletions(-) diff --git a/src/add-ons/translators/png/PNGView.cpp b/src/add-ons/translators/png/PNGView.cpp index 71489c8422..bc46c05ed6 100644 --- a/src/add-ons/translators/png/PNGView.cpp +++ b/src/add-ons/translators/png/PNGView.cpp @@ -47,10 +47,9 @@ PNGView::PNGView(const BRect &frame, const char *name, uint32 resizeMode, BStringView *versionView = new BStringView("version", version); BStringView *copyrightView = new BStringView( - "Copyright", B_UTF8_COPYRIGHT "2003-2006 Haiku Inc."); + "Copyright", B_UTF8_COPYRIGHT "2003-2018 Haiku Inc."); // setup PNG interlace options - fInterlaceMenu = new BPopUpMenu(B_TRANSLATE("Interlace Option")); BMenuItem* item = new BMenuItem(B_TRANSLATE("None"), _InterlaceMessage(PNG_INTERLACE_NONE)); @@ -90,8 +89,9 @@ PNGView::PNGView(const BRect &frame, const char *name, uint32 resizeMode, .AddGlue() .Add(fCopyrightView); + /* ** fix for trac ticket #13353 BFont font; - GetFont(&font); + GetFont(&font); SetExplicitPreferredSize(BSize((font.Size() * 390) / 12, (font.Size() * 180) / 12)); @@ -100,6 +100,7 @@ PNGView::PNGView(const BRect &frame, const char *name, uint32 resizeMode, BSize(fCopyrightView->LineWidth(4), fCopyrightView->TextHeight(0, 80))); fCopyrightView->SetExplicitMaxSize(fCopyrightView->ExplicitPreferredSize()); fCopyrightView->SetExplicitMinSize(fCopyrightView->ExplicitPreferredSize()); + */ }
comment:5 by , 7 years ago
Normally, patches are now submitted to review.haiku-os.org, you can do so from the Git command line.
Please do not just comment out code like this, we use git to track history so just remvove it. Do provide a commit message mentionning the ticket number so that your changes can be tracked (eg. in "git blame").
Note:
See TracTickets
for help on using tickets.
Fix simply removes workaround for older bug (already fixed).