Changed PNG translator config view

Removed workaround for already fixed bug 4217 and removed the call
to SetExplicitPreferredSize(), since the layout system was always able 
to calculate good values for PreferredSize.
So for me the call seems to be superfluous.

Fixes #13353